syntax = "proto3";

option csharp_namespace = "GrpcClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The fareweller service definition.
service Fareweller {
  // Says goodbye
  rpc SayGoodbye (GoodbyeRequest) returns (GoodbyeReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message containing the user's name.
message GoodbyeRequest {
  string name = 1;
}

// The response message containing the farewell.
message GoodbyeReply {
  string message = 1;
}
